default run as non-root user. Fixes #2041
Signed-off-by: David J. M. Karlsen <david@davidkarlsen.com>

--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -186,6 +186,10 @@ memcached:
   nodeSelector: {}
   tolerations: []
   affinity: {}
+  securityContext:
+    runAsUser: 999
+    runAsGroup: 999
+    fsGroup: 999
   resources: {}
     # If you do want to specify resources, uncomment the following
     # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
