--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -144,6 +144,10 @@ gpgKeys:
   # signatures of commits.
   configMapName: ""
 
+sync:
+  # use `.sync.state: secret` to store flux's state as an annotation on the secret (instead of a git tag)
+  state: git
+
 git:
   # URL of git repo with Kubernetes manifests; e.g. git.url=ssh://git@github.com/weaveworks/flux-get-started
   url: ""
@@ -151,6 +155,9 @@ git:
   branch: "master"
   # Path within git repo to locate Kubernetes manifests (relative path)
   path: ""
+  # Set to `true` if you intend for Flux to not be able to push changes to git.
+  # Also configure state.mode to `secret` since storing state in a git tag will no longer be possible.
+  readonly: false
   # Username to use as git committer
   user: "Weave Flux"
   # Email to use as git committer
