Mention readonly and sync state in example deploy

--- a/deploy/flux-deployment.yaml
+++ b/deploy/flux-deployment.yaml
@@ -143,6 +143,12 @@ spec:
         # Include this to enable git signature verification
         # - --git-verify-signatures
 
+        # Tell flux it has readonly access to the repo (default `false`)
+        # - --git-readonly
+
+        # Instruct flux where to put sync bookkeeping (default "git", meaning use a tag in the upstream git repo)
+        # - --sync-state=git
+
         # Include these next two to connect to an "upstream" service
         # (e.g., Weave Cloud). The token is particular to the service.
         # - --connect=wss://cloud.weave.works/api/flux
