--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run: make check-generated
       - run: make test TEST_FLAGS="-race -tags integration -timeout 60s"
       - run: make all
-
+      - run: make e2e
       - deploy:
           name: Maybe push prerelease images
           command: |
@@ -34,7 +34,6 @@ jobs:
               docker tag "docker.io/weaveworks/helm-operator:$(docker/image-tag)" "docker.io/weaveworks/helm-operator-prerelease:$(docker/image-tag)"
               docker push "docker.io/weaveworks/helm-operator-prerelease:$(docker/image-tag)"
             fi
-
       - deploy:
           name: Maybe push release image and upload binaries
           command: |
@@ -50,17 +49,6 @@ jobs:
               RELEASE_TAG=$(echo "$CIRCLE_TAG" | cut -c 6-)
               docker push "docker.io/weaveworks/helm-operator:${RELEASE_TAG}"
             fi
-  e2e-testing:
-    machine: true
-    working_directory: ~/go/src/github.com/weaveworks/flux
-    steps:
-      - checkout
-      - run: test/e2e/e2e-golang.sh
-      - run: test/e2e/e2e-flux-build.sh
-      - run: test/e2e/e2e-kind.sh
-      - run: test/e2e/e2e-helm.sh
-      - run: test/e2e/e2e-git.sh
-      - run: test/e2e/e2e-flux-chart.sh
 
 workflows:
   version: 2
@@ -70,6 +58,4 @@ workflows:
           filters:
             tags:
               only: /(helm-)?[0-9]+(\.[0-9]+)*(-[a-z]+)?/
-      - e2e-testing:
-          requires:
-            - build
+
