Garbage collection dry run
Before this change there was no ability to run the garbage collection
process in a dry run, without touching any resources.

After this change you can enable the option sync-garbage-collection-dry
to only log what would be garbage collected, rather than deleting.

--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -191,8 +191,10 @@ spec:
           - --connect=wss://cloud.weave.works/api/flux
           - --token={{ .Values.token }}
           {{- end }}
-          {{- if .Values.syncGarbageCollection.enabled }}
+          {{- if and .Values.syncGarbageCollection.enabled (not .Values.syncGarbageCollection.dry) }}
           - --sync-garbage-collection={{ .Values.syncGarbageCollection.enabled }}
+          {{- else if .Values.syncGarbageCollection.dry }}
+          - --sync-garbage-collection-dry={{ .Values.syncGarbageCollection.dry }}
           {{- end }}
           {{- if .Values.additionalArgs }}
 {{ toYaml .Values.additionalArgs | indent 10 }}
