Incorporate pod DNS settings into chart
Mainly to provide people with the tools to overcome nslookup issues on
certain Kubernetes setups, as one solution seems to be to configure the
ndots value to "1".

Ref: https://github.com/weaveworks/flux/issues/2051#issuecomment-494040058

--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -218,6 +218,13 @@ spec:
 {{ toYaml .Values.additionalArgs | indent 10 }}
           {{- end }}
           resources:
+{{- if .Values.dnsPolicy }}
+      dnsPolicy: {{ .Values.dnsPolicy }}
+{{- end }}
+{{- if .Values.dnsConfig }}
+      dnsConfig:
+{{ toYaml .Values.dnsConfig | indent 8 }}
+{{- end }}
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
       nodeSelector:
