--- a/deploy/flux-deployment.yaml
+++ b/deploy/flux-deployment.yaml
@@ -139,3 +139,11 @@ spec:
         # Serve /metrics endpoint at different port;
         # make sure to set prometheus' annotation to scrape the port value.
         - --listen-metrics=:3031
+
+      # Optional DNS settings, configuring the ndots option may resolve
+      # nslookup issues on some Kubernetes setups.
+      # dnsPolicy: "None"
+      # dnsConfig:
+      #   options:
+      #     - name: ndots
+      #       value: "1"
