--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -1,13 +1,12 @@
 FROM ddidier/sphinx-doc
-RUN pip install 'sphinx_markdown_tables'		\
-		'recommonmark 		== 0.5.0'
 
+RUN pip install 'sphinx_markdown_tables' 'recommonmark == 0.5.0'
 
-# docker build
-#
-# to build docs, run:
-# docker run -i -v `pwd`:/doc -e USER_ID=$UID <image> make html
-#
-# to serve docs on :8000, run:
-# docker run -i -v `pwd`:/doc -e USER_ID=$UID -p 8000:8000 <image> python -m http.server 8000
-# and point your browser to: http://localhost:8000/_build/html/index.html
+WORKDIR /doc
+
+COPY . .
+
+RUN make html
+
+CMD ["python", "-m", "http.server", "8000"]
+
