--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -1,6 +1,7 @@
 FROM ddidier/sphinx-doc
 
-RUN pip install 'sphinx_markdown_tables' 'recommonmark == 0.5.0'
+RUN apt update && apt install -y linkchecker && \
+    pip install 'sphinx == 2.1.1' 'sphinx_markdown_tables' 'recommonmark == 0.5.0'
 
 WORKDIR /doc
 
