--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -1,7 +1,9 @@
 FROM ddidier/sphinx-doc
 
 RUN apt update && apt install -y linkchecker && \
-    pip install 'sphinx == 2.1.1' 'sphinx_markdown_tables' 'recommonmark == 0.5.0'
+    pip install 'sphinx                 == 2.1.1' \
+                'sphinx_markdown_tables == 0.0.9' \
+                'recommonmark           == 0.5.0'
 
 WORKDIR /doc
 
