--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ jobs:
       - run: make test TEST_FLAGS="-race -tags integration -timeout 60s"
       - run: make all
       - run: make e2e
+      - run: make test-docs
       - save_cache:
           key: cache-{{ checksum "Makefile" }}
           paths:
