Helm chart: allow namespace scoping for Flux and helm-op - add clusterRole.create field to chart values - if cluster role create if false, Flux and the Helm Operator will be restricted to the namespace where they are deployed and the kubeconfig default context will be set to that namespace - enforce the namespace restriction with RBAC

--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -148,6 +148,9 @@ spec:
 {{ toYaml .Values.extraEnvs | indent 10 }}
           {{- end }}
           args:
+          {{- if not .Values.clusterRole }}
+          - --k8s-allow-namespace={{ .Release.Namespace }}
+          {{end}}
           {{- if .Values.logFormat }}
           - --log-format={{ .Values.logFormat }}
           {{end}}
