--- a/chart/flux/templates/helm-operator-crd.yaml
+++ b/chart/flux/templates/helm-operator-crd.yaml
@@ -1,5 +1,4 @@
-{{- if .Values.helmOperator.create -}}
-{{- if .Values.helmOperator.createCRD -}}
+{{- if and .Values.helmOperator.create .Values.helmOperator.createCRD -}}
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -176,4 +175,4 @@ spec:
                   name:
                     type: string
 {{- end -}}
-{{- end -}}
+
