--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -89,6 +89,11 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name:
 
+# If `false`, Flux and the Helm Operator will be restricted to the namespace where they are deployed
+# and the kubeconfig default context will be set to that namespace
+clusterRole:
+  create: true
+
 resources:
   requests:
     cpu: 50m
