--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -148,9 +148,9 @@ spec:
 {{ toYaml .Values.extraEnvs | indent 10 }}
           {{- end }}
           args:
-          {{- if not .Values.clusterRole }}
+          {{- if not .Values.clusterRole.create }}
           - --k8s-allow-namespace={{ .Release.Namespace }}
-          {{end}}
+          {{- end}}
           {{- if .Values.logFormat }}
           - --log-format={{ .Values.logFormat }}
           {{end}}
