--- a/website/config.toml
+++ b/website/config.toml
@@ -1,4 +1,4 @@
-#baseURL = "http://example.org/"
+baseURL = "http://example.org/"
 languageCode = "en-us"
 theme = "github-project-landing-page"
 
@@ -11,16 +11,3 @@ title = "Flux CD"
 	project_url = "https://github.com/fluxcd/flux"
 	github_project_name = "flux"
 	github_user_name = "fluxcd"
-
-	first_color="#f8f8f8"
-	first_border_color="#e7e7e7"
-	first_text_color="#333"
-
-	second_color="white"
-	second_text_color="#333"
-
-	header_color="#f8f8f8"
-	header_text_color="rgb(51, 51, 51)"
-
-	header_link_color="#777"
-	header_link_hover_color="rgb(51, 51, 51)"
