--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -81,6 +81,8 @@ helmOperator:
 rbac:
   # Specifies whether RBAC resources should be created
   create: true
+  # Specifies whether PSP resources should be created
+  pspEnabled: false
 
 serviceAccount:
   # Specifies whether a service account should be created
