--- a/chart/flux/templates/psp.yaml
+++ b/chart/flux/templates/psp.yaml
@@ -29,4 +29,38 @@ spec:
     rule: RunAsAny
   volumes:
     - '*'
+---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: {{ template "flux.fullname" . }}-psp
+  labels:
+    app: {{ include "flux.name" . }}
+    chart: {{ include "flux.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+rules:
+    - apiGroups: ['policy']
+      resources: ['podsecuritypolicies']
+      verbs:     ['use']
+      resourceNames:
+        - {{ template "flux.fullname" . }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+    name: {{ template "flux.fullname" . }}-psp
+    labels:
+        app: {{ include "flux.name" . }}
+        chart: {{ include "flux.chart" . }}
+        release: {{ .Release.Name }}
+        heritage: {{ .Release.Service }}
+roleRef:
+    apiGroup: rbac.authorization.k8s.io
+    kind: ClusterRole
+    name: {{ template "flux.fullname" . }}-psp
+subjects:
+    - kind: ServiceAccount
+      name: {{ template "flux.serviceAccountName" . }}
+      namespace: {{ .Release.Namespace }}
 {{- end }}
