--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,10 @@ jobs:
       - run:
           name: Publish chart
           command: |
+            if [[ -z $CIRCLE_TAG ]]; then
+              echo "Not a release! Skip chart publish";
+              exit;
+            fi
             REPOSITORY="https://fluxcdbot:${GITHUB_TOKEN}@github.com/fluxcd/flux.git"
             git config user.email fluxcdbot@users.noreply.github.com
             git config user.name fluxcdbot
