--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,7 +163,7 @@ workflows:
       - build:
           filters:
             tags:
-              only: /(helm-)?[0-9]+(\.[0-9]+)*(-[a-z0-9]+)?/
+              only: /[0-9]+(\.[0-9]+)*(-[a-z0-9]+)?/
 
   release-helm:
     jobs:
