Add manifest generation to helm chart.
To be able to use flux with kustomize, it needs to be started with
--manifest-generation, this was absent in the helm chart. This
commit adds this.

--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -186,6 +186,9 @@ spec:
           {{- if .Values.git.label }}
           - --git-label={{ .Values.git.label }}
           {{- end }}
+          {{- if .Values.git.manifestGeneration }}
+          - --manifest-generation=true
+          {{- end }}
           - --registry-poll-interval={{ .Values.registry.pollInterval }}
           - --registry-rps={{ .Values.registry.rps }}
           - --registry-burst={{ .Values.registry.burst }}
