--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
               git config user.name fluxcdbot
               git remote set-url origin ${REPOSITORY}
               git checkout gh-pages
-              mv $HOME/chart/*.tgz .
+              cp $HOME/chart/*.tgz .
               helm repo index . --url https://fluxcd.github.io/flux
               git add .
               git commit -m "Publish Helm chart"
