--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -137,7 +137,11 @@ spec:
             mountPath: /var/fluxd/keygen
           {{- if .Values.registry.acr.enabled }}
           - name: acr-credentials
+            {{- if not .Values.registry.acr.secretName }}
             mountPath: /etc/kubernetes/azure.json
+            {{- else }}
+            mountPath: /etc/kubernetes/
+            {{- end }}
             readOnly: true
           {{- end }}
           {{- if .Values.registry.dockercfg.enabled }}
